# Recruitmentagent

./: .env.backup  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLEAN_ARCHITECTURE_PLAN.md  GIT_SETUP.md  README.md  coverage.xml  create_github_repo.sh  current_projects.json  demo_results.json  main.py  mongodb_exploration_results.json  production_check.py  push_to_github.sh  push_with_token.sh  pyproject.toml  requirements.txt
agents/: __init__.py  database_agent.py  outreach_manager.py  recruitment_executive.py  sourcing_manager_unified.py
config/: __init__.py  config.py
flows/: __init__.py  outreach_manager_flow.py  recruitment_executive_flow.py
prompts/: LinkedIn_outreach_agent_prompts.py  candidate_searching_agent_prompts.py  ghostwriter_agent_prompts.py
scripts/: __init__.py  connect_linkedin_account.py  connect_with_cookies.py
src/: __init__.py
src/application/: __init__.py
src/application/orchestrators/: __init__.py  outreach_manager_orchestrator.py  recruitment_executive_orchestrator.py  sourcing_manager_orchestrator.py
src/application/use_cases/: __init__.py
src/application/use_cases/outreach/: __init__.py  generate_personalized_message.py  send_email_outreach.py  send_linkedin_outreach.py
src/application/use_cases/sourcing/: __init__.py  enrich_candidate_profiles.py  evaluate_candidates.py  search_candidates.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  campaign.py  candidate.py  outreach_message.py  project.py  recruitment_request.py
src/domain/enums/: __init__.py  candidate_status.py  evaluation_result.py  outreach_channel.py  workflow_stage.py
src/domain/exceptions/: __init__.py  candidate_not_found.py  invalid_project.py  validation_error.py
src/domain/repositories/: __init__.py  campaign_repository.py  candidate_repository.py  project_repository.py
src/domain/services/: __init__.py  candidate_evaluation_service.py  candidate_matching_service.py  deduplication_service.py
src/domain/value_objects/: __init__.py  candidate_id.py  contact_info.py  evaluation_score.py  project_id.py  skill_set.py
src/infrastructure/ai/: __init__.py  langchain_service.py  openai_service.py
src/infrastructure/ai/prompts/: __init__.py  profile_scraping_agent_prompts.py  recruitment_executive_agent_prompts.py  scourcing_manager_prompts.py  unified_sourcing_manager_prompts.py
src/infrastructure/config/: __init__.py  app_config.py
src/infrastructure/external_services/email/: __init__.py  email_service_impl.py  smtp_client.py
src/infrastructure/external_services/linkedin/: __init__.py  linkedin_api_client.py  linkedin_service_impl.py
src/infrastructure/persistence/mongodb/: __init__.py  mongodb_candidate_repository.py  mongodb_client.py  mongodb_project_repository.py
src/infrastructure/tools/: __init__.py  langgraph_database_tools.py  langgraph_outreach_tools.py  langgraph_project_tools.py  langgraph_sourcing_tools.py
src/presentation/: __init__.py
src/presentation/cli/: main.py
state/: agent_state.py  sourcing_manager_state.py
sub_agents/: LinkedIn_outreach_agent.py  calender_agent.py  candidate_evaluation_agent.py  candidate_serching_agent.py  email_outreach_agent.py  ghostwriter_agent.py  profile_scraping_agent.py
test/: test_complete_mock.py  test_profile_scraping_agent.py  test_profile_scraping_integration.py  test_real_api_integration.py
tools/: database_agent_tools.py  get_projects.py  outreach_tools.py  scourcing_tools.py  search_tools.py
